--- a/Docker_compose/python/Dockerfile
+++ b/Docker_compose/python/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.9
 
-RUN pip install mysql-connector-python
+RUN pip install mysql-connector-python && pip install mysqlclient
 
 WORKDIR /usr/app/src
 
