--- a/Docker_compose/mysql/my.cnf
+++ b/Docker_compose/mysql/my.cnf
@@ -10,7 +10,7 @@ lower_case_table_names = 1
 bind-address            = 0.0.0.0
 server-id               = 1
 log_bin                 = /var/run/mysqld/mysql-bin.log
-binlog_do_db            = sbtest
+binlog_do_db            = db
 
 gtid_mode                = on
 enforce_gtid_consistency = on
